--- a/index.html
+++ b/index.html
@@ -1,64 +1,61 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quét Mã QR Căn Cước Công Dân</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-        #reader {
-            width: 100%;
-            max-width: 400px;
-            height: 300px;
-        }
-        #result {
-            margin-top: 20px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QR Code Scanner</title>
+  <style>
+    #video {
+      width: 100%;
+      height: auto;
+    }
+    #result {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Quét Mã QR Căn Cước Công Dân</h1>
-    <div id="reader"></div>
-    <div id="result"></div>
+  <h1>QR Code Scanner</h1>
+  <video id="video" playsinline></video>
+  <div id="result">No QR code detected.</div>
+  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+  <script>
+    const video = document.getElementById('video');
+    const result = document.getElementById('result');
 
-    <!-- Thêm thư viện html5-qrcode -->
-    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
-    <script>
-        function onScanSuccess(decodedText, decodedResult) {
-            // Xử lý kết quả quét mã QR
-            document.getElementById('result').innerText = `Thông tin mã QR: ${decodedText}`;
-        }
+    function onScanSuccess(decodedText, decodedResult) {
+      // Handle on success condition with the decoded text or result.
+      console.log(`Scan result: ${decodedText}`, decodedResult);
+      result.innerText = `QR Code detected: ${decodedText}`;
+      navigator.clipboard.writeText(decodedText).then(() => {
+        console.log('Copied to clipboard');
+      }).catch(err => {
+        console.error('Failed to copy text: ', err);
+      });
+    }
 
-        function onScanFailure(error) {
-            // Xử lý lỗi quét mã QR (nếu cần)
-            console.warn(`Mã QR không hợp lệ: ${error}`);
-        }
+    function onScanFailure(error) {
+      // Handle scan failure, usually better to ignore and keep scanning.
+      console.warn(`QR code scan error: ${error}`);
+    }
 
-        // Khởi tạo trình quét mã QR
-        let html5QrcodeScanner = new Html5QrcodeScanner(
-            "reader", 
-            {
-                fps: 10, 
-                qrbox: {
-                    width: 250,
-                    height: 250
-                },
-                rememberLastUsedCamera: true,
-                aspectRatio: 1.0,
-                disableFlip: false
-            }
+    const html5QrCode = new Html5Qrcode("video");
+    Html5Qrcode.getCameras().then(cameras => {
+      if (cameras && cameras.length) {
+        const cameraId = cameras[0].id;
+        html5QrCode.start(
+          cameraId,
+          {
+            fps: 10,    // Optional, frame per seconds for qr code scanning
+            qrbox: 250  // Optional, if you want bounded box UI
+          },
+          onScanSuccess,
+          onScanFailure
         );
-
-        // Bắt đầu quét
-        html5QrcodeScanner.render(onScanSuccess, onScanFailure);
-    </script>
+      }
+    }).catch(err => {
+      console.error(`Error getting cameras: ${err}`);
+    });
+  </script>
 </body>
 </html>
